styles.css
* {
    box-sizing: border-box;
    margin: 0;
}

body {
    width: 100%;
    background-color: lightyellow;
}

/*Navigation Styling*/

nav {
    display: flex;
    margin: 0;
    width: 100%;
    padding: 1% 25%;
    justify-content: space-between;
    align-items: center;
    font-family: 'Caveat Brush', cursive;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
    background-color: lightyellow;
    font-size: 1.5rem;
    margin-bottom: 2rem;
    position: fixed;
    z-index: 100;
}

/*Media Queries for nav */
/*TABLET*/
@media only screen and (min-width: 1080px ) and (max-width: 1980px) {
    nav {
        padding: 1% 10%;
    }
}

nav .left-side-nav{
    display: flex;
    align-items: center;
    width: 10%;
}

/*PHONE*/
@media only screen and (min-width: 390px ) and (max-width: 1080px) {
    nav {
        padding: 1% 0;
        justify-content: space-evenly;
        font-size: 1rem;
    }

    nav .img {
        height: 40px !important;
        width: 50px !important;
    }

    nav .left-side-nav {
        margin-right: 40%;
    }

    nav .right-side-nav h3 {
        padding-right: 2.5%;
    }

    nav button {
        padding: 2.5% !important;
        font-size: 10px !important;
        margin-right: 5% !important;
    }
}

nav .left-side-nav{
    display: flex;
    align-items: center;
    width: 10%;
}


/* Button */
nav button {
  background: #FF4742;
  border: 1px solid #FF4742;
  border-radius: 6px;
  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
  box-sizing: border-box;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
  font-size: 16px;
  font-weight: 800;
  line-height: 16px;
  min-height: 40px;
  outline: 0;
  padding: 10%;
  text-align: center;
  text-rendering: geometricprecision;
  text-transform: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: middle;
  margin-right: 10%;
}

nav button:hover,
nav button:active {
  background-color: initial;
  background-position: 0 0;
  color: #FF4742;
}

nav button:active {
  opacity: .5;
}

nav .right-side-nav {
    display: flex;
    justify-content: center;
    align-items: center;
}

nav .img {
    height: 100px;
    width: 125px;
}

nav h1 {
    padding-left: 5%;
}

nav .right-side-nav h3{
    padding-right: 10%;
}

/*Middle Section */

#middle {
    margin: auto;
    width: 90%;
    display: flex;
    justify-content: center;
    font-family: 'Caveat Brush', cursive;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
    background-color: lightblue;
    font-size: 1.5rem;
    border-top: 145px solid lightyellow;
}

section .left-side-main {
    width: -webkit-fill-available;
    height: 1200px;
    padding: 0;
}

section .slideshow-container {
    height: inherit;
    width: inherit;
    object-fit: cover;
}

section .slideshow-container img {
    height: inherit;
    width: inherit;
}

section .right-side-main {
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    align-items: center;
    justify-content: center;
    width: 90%;
    position: absolute;
    background-color: lightgray;
    opacity: 0.75;
    height: 1200px; /* set to be the same as the height of the slideshow container
*/}

section .right-side-main h2 {
    font-weight: bolder;
    font-size: 10rem;
    text-align: center;
}

section .right-side-main p {
    font-weight: bolder;
    font-size: 5rem;
    text-align: center;
    padding: 1% 10%;
    line-height: 8rem;
}

/*Middle section Media Queries*/
/*TABLET*/
@media only screen and (min-width: 1080px) and (max-width: 1980px) {
    .right-side-main h2 {
        font-size: 5rem !important;
        padding: 0 10px;
   }
   .right-side-main p {
        font-size: 3.5rem !important;
   }
   #middle {
        border-top: 130px solid lightyellow;
   }
}
/*MOBILE*/
@media only screen and (min-width: 390px) and (max-width: 1080px) {
    #middle {
        border-top: 80px solid lightyellow;
    }

    section .right-side-main {
        height: 700px !important;
    }

    section .right-side-main h2  {
        font-size: 2.5rem !important;
    }

    section .right-side-main p {
        font-size: 2rem !important;
        line-height: 3rem;
    }

    section .left-side-main {
        height: 700px !important;
    }
}


/*Sample Menu section */
.sample-menu {
    height: 100%;
    width: auto;
    margin: 5%;
    padding-bottom: 5%;
    font-family: 'Caveat Brush', cursive;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
    background-color: rgb(87, 101, 248);
    display: flex;
    flex-direction: column;
}

.sample-menu-header {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 4rem;
    padding-top: 2%;
}

.sample-menu .menu-item-card {
    display: flex;
    margin: 2%;
    justify-content: center;
    align-items: center;
}

.sample-menu .menu-item-img-container {
    width: 800px;
    height: 700px;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
}

.sample-menu .menu-item-card img {
    width: inherit;
    height: inherit;
}

.sample-menu .menu-item-card h2 {
    height: 100%;
    width: 50%;
    background-color: whitesmoke;
    margin-left: 1%;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
}

.sample-menu .menu-item-text {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background-image: url(./images/output-onlinepngtools.png);
    background-size: cover;
    height: 700px;
    width: 50%;
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
}

.sample-menu .menu-item-text H1 {
    font-size: 5rem;
    text-align: center;
    font-weight: bolder;
    margin: 5%;
}

.sample-menu .menu-item-text p {
    font-size: 3rem;
    margin: 3%;
    text-align: center;
    font-weight: bold;
}

.menu-item-text p.emojis {
    opacity: 0.5;
    font-size: 1.5rem;
}

@media only screen and (min-width: 1080px) and (max-width: 1980px) {
    .sample-menu-header {
        font-size: 3rem !important;
    }

    .menu-item-text {
        height: 500px !important;
    }

    .menu-item-text H1 {
        font-size: 3rem !important;
    }

    .menu-item-text p {
        font-size: 2rem !important;
    }

    .menu-item-text p.emojis {
        font-size: 0.75rem !important;
    }

    .menu-item-img-container{
        width: 400px !important;
        height: 500px !important;
    }
}

@media only screen and (min-width: 390px ) and (max-width: 1080px) {
    .sample-menu-header {
        font-size: 2rem !important;
        text-align: center !important;
    }

    .menu-item-img-container{
        width: 150px !important;
        height: 250px !important;
    }

    .menu-item-text {
        height: 250px !important;
    }

    .menu-item-text H1 {
        font-size: 1.5rem !important;
    }

    .menu-item-text p {
        font-size: 1rem !important;
    }

    .menu-item-text p.emojis {
        font-size: 0.25rem !important;
    }
}


/*Team section */
#team {
    height: 100%;
    margin: 5%;
    font-family: 'Caveat Brush', cursive;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
    background-color: rgb(251, 112, 112);
}

#team #meet-the-team {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 98%;
}

#team .meet-the-team-header {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2%;
    margin-top: 5%;
    font-size: 5rem;
}

#team .photo-container {
    margin: 2%;
}

#team .photo-container img {
    height: 600px;
    width: 1200px;
}

#team #vertical-line {
    padding: 0%;
}

#team #vertical-line img {
    width: inherit;
    height: inherit;
}

#team .about-text {
    padding: 2%;
    text-align: left;
}

#team #text-div {
    display: flex;
}

#team .about-text h1 {
    font-size: 5rem;
    padding-bottom: 2rem;
}

#team .about-text p {
    font-size: 2.75rem
}

@media only screen and (min-width: 1080px) and (max-width: 1980px) {
    #team .photo-container img {
        height: 300px;
        width: 600px;
    }

    #team .about-text h1 {
        font-size: 4rem;
        text-align: center;
    }

    #team .about-text p {
        font-size: 2rem;
        text-align: center;
    }
}

@media only screen and (min-width: 390px) and (max-width: 1080px) {
    #team .photo-container img {
        height: 150px;
        width: 300px;
    }

    .meet-the-team-header h2 {
        font-size: 2rem !important;
        text-align: center;
    }

    #meet-the-team #vertical-line {
        width: 100px;
    }

    #meet-the-team .about-text h1 {
        font-size: 2rem;
        text-align: center;
    }

    #team .about-text p {
        font-size: 1.5rem;
        text-align: center;
    }
}





/* footer */

footer {
    display: flex;
    margin: 0;
    width: 100%;
    padding: 1% 1%;
    justify-content: space-between;
    align-items: center;
    font-family: 'Caveat Brush', cursive;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
    background-image: url(./images/output-onlinepngtools\ \(3\)\ \(1\).png);
    background-size: cover;
    font-size: 1.5rem;
}

footer #social-media {
    display: flex;
    flex-wrap: nowrap;
}

footer #logo-container{
    height: 100px;
    width: 100px;
    margin-left: 10px;
    margin-right: 10px;
}

footer img {
    height: inherit;
    width: inherit;
}

@media only screen and (min-width: 390px) and (max-width: 1080px) {
    footer {
        font-size: 0.5rem;
    }

    footer #logo-container{
        height: 50px;
        width: 50px;
        margin-left: 10px;
        margin-right: 10px;
    }

}

